@@ -1,21 +1,23 @@
 package com.selim.taskmanager.service;
 
 import com.selim.taskmanager.data.RoleDao;
-import com.selim.taskmanager.entitiy.Role;
-import com.selim.taskmanager.rest.model.RoleAddRequestModel;
-import com.selim.taskmanager.rest.model.RoleAddResponseModel;
-import com.selim.taskmanager.rest.model.RoleShowResponseModel;
-import com.selim.taskmanager.rest.model.RoleUpdateRequestModel;
+import com.selim.taskmanager.data.UsersDao;
+import com.selim.taskmanager.entity.Role;
+import com.selim.taskmanager.entity.Users;
+import com.selim.taskmanager.rest.model.*;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class RoleServiceImpl implements RoleService {
     private RoleDao roleDao;
+    private UsersDao usersDao;
 
-    public RoleServiceImpl(RoleDao roleDao) {
+    public RoleServiceImpl(RoleDao roleDao, UsersDao usersDao) {
         this.roleDao = roleDao;
+        this.usersDao = usersDao;
     }
 
     @Override
@@ -47,7 +49,11 @@ public class RoleServiceImpl implements RoleService {
     @Override
     public List<RoleShowResponseModel> getAllRoles() {
         List<Role> roles = roleDao.getAllRoles();
-        return roles.stream().map(r -> new RoleShowResponseModel(r.getId(), r.getName(), r.getDescription())).toList();
+        for (Role role : roles) {
+            List<Users> users = usersDao.getUsersByRoleId(role.getId());
+            role.setUsers(users);
+        }
+        return roles.stream().map(u -> new RoleShowResponseModel(u.getId(), u.getName(), u.getDescription(), u.getUsers())).collect(Collectors.toList());
     }
 
     @Override
@@ -58,10 +64,27 @@ public class RoleServiceImpl implements RoleService {
     }
 
     @Override
+    public List<GetRolesByUserIdModel> getRolesByUsername(String username) {
+        return roleDao.getRolesByUsername(username).stream().map(u -> new GetRolesByUserIdModel(
+                u.getId(), u.getName(), u.getDescription())).collect(Collectors.toList());
+    }
+
+
+    @Override
     public RoleAddResponseModel getRoleById(UUID id) {
         Role role = roleDao.getRoleById(id);
         RoleAddResponseModel roleAddResponseModel = new RoleAddResponseModel(
                 id, roleDao.getRoleById(id).getName(), roleDao.getRoleById(id).getDescription());
         return roleAddResponseModel;
+    }
+
+
+    @Override
+    public List<GetRolesByUserIdModel> getRolesByUserId(int userId) {
+        return roleDao.getRolesByUserId(userId).stream().map(role -> new GetRolesByUserIdModel(
+                        role.getId(),
+                        role.getName(),
+                        role.getDescription()
+                )).collect(Collectors.toList());
     }
 }
